--- a/.gitignore
+++ b/.gitignore
@@ -1,24 +1,24 @@
-# See https://help.github.com/articles/ignoring-files/
-
-# Dependency directories
-node_modules/
-
-# Build output
-.dist/
-dist/
-
 # Logs
+logs
+*.log
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 pnpm-debug.log*
+lerna-debug.log*
 
-# Local env files
-.env
-.env.*
+node_modules
+dist
+dist-ssr
+*.local
 
 # Editor directories and files
-.vscode/
-*.swp
+.vscode/*
+!.vscode/extensions.json
+.idea
 .DS_Store
-Thumbs.db
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
