chore: remove test-extract* and ignore them

--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,10 @@ dist
 dist-ssr
 *.local
 
+# Test extracts
+test-extract/
+test-extract-latest/
+
 # Editor directories and files
 .vscode/*
 !.vscode/extensions.json
